# RecoilRebuild

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.agent/: IMPLEMENTATION_GROUPS.md  RAW_ADDRESS_ALLOWLIST.txt  RAW_ASSEMBLY_ALLOWLIST.txt  RECOIL_PLAN.md  REFERENCE_EXECUTABLE.json  REINTERPRET_CAST_BASELINE.txt  RESOURCE_MANIFEST.json  VC6_MANIFEST_SOURCE_POLICY_BASELINE.txt
cmake/: RecoilCompiler.cmake  RecoilDirectX.cmake  RecoilMfc42.cmake
docs/reconstruction/: NOTES.md  README.md  agent_launch_checklist.md  compiler_linker_provenance.md  inlined_helpers.md  knowledge_index.md  original_class_candidates.md  original_classes.md  provider_abi_notes.md  source_file_map.md  verified_patterns.md  visual_studio_mcp_workflow.md  zsnd_cd_verification.md  zsnd_error_verification.md  zsnd_play_handle_verification.md  zsnd_sample_set_verification.md  zsnd_snapshot_verification.md
export/: README.md  User Types.txt  rdata.linear.txt  rsrc.linear.txt  user_types.txt
reconstruction/: NOTES.md
src/Battlesport/: Briefing.cpp  Briefing.h  CZGameFrame.cpp  CZGameFrame.h  CZRecoilFrame.cpp  CZRecoilFrame.h  GameNet.cpp  GameNet.h  HudSensorTracker.cpp  HudSensorTracker.h  HudUiMainMenuDialog.cpp  HudUiNetExitPanel.cpp  HudUiNetExitPanel.h  Mfc42Abi.h  MfcThreeFloatDialog.cpp  Recoil.cpp  Recoil.h  Recoil.rc  RecoilApp.cpp  RecoilApp.h  RecoilApp_PlayState_TickAndRenderFrame.cpp  RecoilStateCredits.cpp  RecoilVersion.cpp  RecoilVersion.h  Resource.h  WestwoodOnlineUpgradeConfigDialog.cpp  WestwoodOnlineUpgradeConfigDialog.h  WinMain.cpp  ainet.cpp  ainet.h  hud.cpp  hud.h  pickup.cpp  pickup.h  player.cpp  player.h  zStr.cpp  zStr.h
src/native/: CMakeLists.txt  recoil_build_anchor.cpp
src/native/include/: intrin.h
src/native/include/recoil/: recoil_callconv.h  recoil_types.h
temp/: function_name_cleanup_findings.md  reconstruction_priority_list.md  stop_all_probe.json
tests/native/: CMakeLists.txt  briefing_tests.cpp  czrecoil_frame_tests.cpp  directx_headers.cpp  fmv_script_tests.cpp  gamenet_tests.cpp  hud_tests.cpp  mfc42_provider.cpp  mfc_three_float_dialog_tests.cpp  pickup_tests.cpp  player_tests.cpp  recoil_app_message_map.cpp  recoil_state_base.cpp  recoil_state_main_menu_transition.cpp  recoil_test_resources.rc  run_native_smokes.py  smoke.cpp  time_tests.cpp  westwood_online_upgrade_tests.cpp  zcom_tests.cpp  zdeclient_tests.cpp  zeffect_tests.cpp  zgame_tests.cpp  zhud_ui_tests.cpp  zimage_tests.cpp  zinput_tests.cpp  zinterp_tests.cpp  zloc_tests.cpp  zmath_tests.cpp  znetwork_tests.cpp  zreader_tests.cpp  zrndr_tests.cpp  zsnd_cd_tests.cpp  zstr_tests.cpp  zsys_tests.cpp  zturret_tests.cpp  zvideo_tests.cpp  zweapon_tests.cpp
tests/tools/: recoil_asm_verify_tests.py  recoil_binja_preflight_tests.py  recoil_binja_tests.py  recoil_claim_tests.py  recoil_doctor_tests.py  recoil_frontier_tests.py  recoil_functional_verify_tests.py  recoil_groups_audit_tests.py  recoil_handoff_tests.py  recoil_msvc_x86_run_tests.py  recoil_no_reinterpret_cast_tests.py  recoil_pe_reference_tests.py  recoil_plan_audit_tests.py  recoil_plan_cli_tests.py  recoil_provenance_audit_tests.py  recoil_resource_extract_tests.py  recoil_source_file_map_tests.py  recoil_status_tests.py  recoil_task_packet_tests.py  recoil_tooling_tests.py  recoil_vc6_build_tests.py  recoil_vc6_manifest_source_guard_tests.py  recoil_vc6_verify_tests.py  recoil_verification_backlog_tests.py  recoil_workspace_hygiene_tests.py  test_recoil_priority.py
tools/: README.md  compiler_linker_profiles.json  recoil_asm_verify.py  recoil_binja.py  recoil_binja_preflight.py  recoil_claim.py  recoil_doctor.py  recoil_env_check.py  recoil_frontier.py  recoil_functional_verify.py  recoil_groups_audit.py  recoil_handoff.py  recoil_msvc_x86_run.py  recoil_no_raw_assembly.py  recoil_no_raw_image_addresses.py  recoil_no_reinterpret_cast.py  recoil_pe.py  recoil_pe_reference.py  recoil_plan.py  recoil_plan_audit.py  recoil_plan_cli.py  recoil_priority.py  recoil_profiles.py  recoil_provenance_audit.py  recoil_resource_extract.py  recoil_source_file_map.py  recoil_status.py  recoil_task_packet.py  recoil_tooling.py  recoil_vc6_build.py  recoil_vc6_manifest_source_guard.py  recoil_vc6_verify.py  recoil_vc6_zsys_cpu_verify.py  recoil_verification_backlog.py  recoil_workspace_hygiene.py  vc6_final_build.json
tools/functional_verify_targets/: README.md  briefing_locator_panel_blit_dirty_rect.json  briefing_locator_panel_constructor.json  briefing_locator_panel_update.json  briefing_objective_picture_draw_noise_overlay.json  briefing_runtime_constructor.json  briefing_runtime_destructor.json  briefing_runtime_update.json  briefing_set_progress_and_sleep.json  crt_atexit_import_provider.json  czgameframe_constructor.json  czrecoil_frame_select_a3d.json  czrecoil_frame_select_directsound.json  czrecoil_frame_update_a3d_cmd_ui.json  czrecoil_frame_update_directsound_cmd_ui.json  czrecoilframe_configure_mode_feature_flags.json  czrecoilframe_constructor.json  czrecoilframe_init_fallback_mode.json  czrecoilframe_init_startup_hw_api_from_options.json  czrecoilframe_on_menu_set_video_mode5.json  czrecoilframe_set_hw_api_and_init_mode.json  directdraw_enumerate_import_provider.json  directinput_create_import_provider.json  get_tick_count_import_provider.json  hud_layout_base_shutdown_stub.json  hud_sensor_get_mission_id.json  hud_sensor_init_mission_id_and_flags.json  hud_sensor_register_mission_section_handlers.json  hud_sensor_set_zbd_path.json  hud_sensor_tracker_load_objectives_from_path.json  hud_ui_background_bind_buttons_node_to_widget_by_name.json  hud_ui_background_bind_primitive_node_to_element.json  hud_ui_background_confirm_quit_lifecycle.json  hud_ui_background_constructor.json  hud_ui_background_container_set_enabled.json  hud_ui_background_cursor_widget_member_constructor_local.json  hud_ui_background_free_loaded_tree_roots.json  hud_ui_background_set_enabled.json  hud_ui_background_update.json  hud_ui_chat_message_stack_destructor_core.json  (+407 more)
tools/vc6_verify_targets/: hud_ui_element_get_xy.json  (+254 more)
(+116 files in other folders)
